Defiend header section bg color

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ h3{
     font-weight: 700;
 }
 
+.header-section{
+    background-color: #FFFBF0;
+}
+
 .panguin-btn{
     background-color: #A4BC46;
     border: none;
