Defined margin-bottom in help cover photo

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h3{
     .help-cover-photo{
         width: 100%;
         text-align: center;
+        margin-bottom: 50px;
     }
 
     .help-insights{
